Улучшена доступность при взаимодействии с карточками с клавиатуры

--- a/catalog.html
+++ b/catalog.html
@@ -113,7 +113,7 @@
         <section class="catalog">
           <h2 class="visually-hidden">Список перфораторов</h2>
           <ul class="catalog-list">
-            <li class="catalog-item">
+            <li class="catalog-item" tabindex="0">
               <p class="tag-new visually-hidden"></p>
               <figure class="catalog-item-card">
                 <h3 class="catalog-item-title">
@@ -126,12 +126,12 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
-            <li class="catalog-item">
+            <li class="catalog-item" tabindex="0">
               <p class="tag-new visually-hidden"></p>
               <figure class="catalog-item-card">
                 <h3 class="catalog-item-title">
@@ -144,12 +144,12 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
-            <li class="catalog-item">
+            <li class="catalog-item" tabindex="0">
               <p class="tag-new">new</p>
               <figure class="catalog-item-card">
                 <h3 class="catalog-item-title">
@@ -162,12 +162,12 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
-            <li class="catalog-item">
+            <li class="catalog-item" tabindex="0">
               <p class="tag-new">new</p>
               <figure class="catalog-item-card">
                 <h3 class="catalog-item-title">
@@ -180,12 +180,12 @@
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
-            <li class="catalog-item">
+            <li class="catalog-item" tabindex="0">
               <p class="tag-new visually-hidden"></p>
               <figure class="catalog-item-card">
                 <h3 class="catalog-item-title">
@@ -198,12 +198,12 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
-            <li class="catalog-item">
+            <li class="catalog-item" tabindex="0">
               <p class="tag-new">new</p>
               <figure class="catalog-item-card">
                 <h3 class="catalog-item-title">
@@ -216,12 +216,12 @@
                 <p class="catalog-item-price catalog-item-old-price"></p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
-            <li class="catalog-item">
+            <li class="catalog-item" tabindex="0">
               <p class="tag-new">new</p>
               <figure class="catalog-item-card">
                 <h3 class="catalog-item-title">
@@ -234,12 +234,12 @@
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
-            <li class="catalog-item">
+            <li class="catalog-item" tabindex="0">
               <p class="tag-new visually-hidden"></p>
               <figure class="catalog-item-card">
                 <h3 class="catalog-item-title">
@@ -252,12 +252,12 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
-            <li class="catalog-item">
+            <li class="catalog-item" tabindex="0">
               <p class="tag-new">new</p>
               <figure class="catalog-item-card">
                 <h3 class="catalog-item-title">
@@ -270,8 +270,8 @@
                 <p class="catalog-item-price catalog-item-old-price"></p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
