--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <a class="button" href="blank.html">Все популярные товары</a>
         </div>
         <ul class="popular-items-list">
-          <li class="popular-item">
+          <li class="popular-item" tabindex="0">
             <p class="tag-new visually-hidden"></p>
             <figure class="popular-item-card">
               <h3 class="popular-item-title">
@@ -145,12 +145,12 @@
               <p class="popular-item-price popular-item-old-price">32500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 9000»">25500 Р.</a>
               <figcaption class="popular-item-options">
-                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 9000 в корзину">Купить</button>
-                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 9000 в закладки">В закладки</button>
+                <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 9000 в корзину">Купить</button>
+                <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 9000 в закладки">В закладки</button>
               </figcaption>
             </figure>
           </li>
-          <li class="popular-item">
+          <li class="popular-item" tabindex="0">
             <p class="tag-new">new</p>
             <figure class="popular-item-card">
               <h3 class="popular-item-title">
@@ -163,12 +163,12 @@
               <p class="popular-item-price popular-item-old-price">22500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
               <figcaption class="popular-item-options">
-                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
-                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
+                <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
+                <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
               </figcaption>
             </figure>
           </li>
-          <li class="popular-item">
+          <li class="popular-item" tabindex="0">
             <p class="tag-new visually-hidden"></p>
             <figure class="popular-item-card">
               <h3 class="popular-item-title">
@@ -181,12 +181,12 @@
               <p class="popular-item-price popular-item-old-price">30500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
               <figcaption class="popular-item-options">
-                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
               </figcaption>
             </figure>
           </li>
-          <li class="popular-item">
+          <li class="popular-item" tabindex="0">
             <p class="tag-new">new</p>
             <figure class="popular-item-card">
               <h3 class="popular-item-title">
@@ -199,8 +199,8 @@
               <p class="popular-item-price popular-item-old-price"></p>
               <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
               <figcaption class="popular-item-options">
-                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
-                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
+                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину" tabindex="0">Купить</button>
+                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки" tabindex="0">В закладки</button>
               </figcaption>
             </figure>
           </li>
