--- a/catalog.html
+++ b/catalog.html
@@ -94,7 +94,67 @@
         <h1 class="page-title">Перфораторы</h1>
         <section class="filters">
           <h2 class="filters-title">Фильтр:</h2>
-          <!-- Здесь будет форма фильтра -->
+          <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+            <fieldset class="filter-item">
+              <legend>Цена:</legend>
+              <div class="range-filter">
+                <div class="range-controls">
+                  <div class="scale">
+                    <div class="bar"></div>
+                  </div>
+                  <div class="toggle toggle-min" tabindex="0"></div>
+                  <div class="toggle toggle-max" tabindex="0"></div>
+                </div>
+                <div class="price-controls">
+                  <label class="min-price">
+                    <input type="number" name="min-price" value="0">
+                  </label>
+                  <label class="max-price">
+                    — <input type="number" name="max-price" value="30000">
+                  </label>
+                </div>
+              </div>
+            </fieldset>
+            <fieldset>
+              <legend>Производители:</legend>
+              <ul>
+                <li class="filter-option filter-checkbox">
+                  <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="bosch" id="filter-bosch" checked>
+                  <label for="filter-bosch">BOSCH</label>
+                </li>
+                <li class="filter-option filter-checkbox">
+                  <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="interskol" id="filter-interskol">
+                  <label for="filter-interskol">Интерскол</label>
+                </li>
+                <li class="filter-option filter-checkbox">
+                  <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="makita" id="filter-makita" checked>
+                  <label for="filter-makita">Makita</label>
+                </li>
+                <li class="filter-option filter-checkbox">
+                  <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="dewalt" id="filter-dewalt">
+                  <label for="filter-dewalt">DeWALT</label>
+                </li>
+                <li class="filter-option filter-checkbox">
+                  <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="hitachi" id="filter-hitachi">
+                  <label for="filter-hitachi">Hitachi</label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset>
+              <legend>Питание:</legend>
+              <ul>
+                <li class="filter-option filter-radio">
+                  <input class="visually-hidden filter-input-radio filter-input" type="radio" name="power-type" value="cordless" id="filter-cordless">
+                  <label for="filter-cordless">Аккумуляторные</label>
+                </li>
+                <li class="filter-option filter-radio">
+                  <input class="visually-hidden filter-input-radio filter-input" type="radio" name="power-type" value="mains-operated" id="filter-mains" checked>
+                  <label for="filter-mains">Сетевые</label>
+                </li>
+              </ul>
+            </fieldset>
+            <button type="submit" class="filter-button button">Показать</button>
+          </form>
         </section>
         <section class="sort">
           <h2 class="sort-title">Сортировка:</h2>
@@ -126,8 +186,8 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -144,8 +204,8 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -162,8 +222,8 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -180,8 +240,8 @@
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -198,8 +258,8 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -216,8 +276,8 @@
                 <p class="catalog-item-price catalog-item-old-price"></p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -234,8 +294,8 @@
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -252,8 +312,8 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -270,8 +330,8 @@
                 <p class="catalog-item-price catalog-item-old-price"></p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
-                  <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
