--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
               <p class="popular-item-price popular-item-old-price">32500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 9000»">25500 Р.</a>
               <figcaption class="popular-item-options">
-                <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 9000 в корзину">Купить</button>
-                <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 9000 в закладки">В закладки</button>
+                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 9000 в корзину">Купить</button>
+                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 9000 в закладки">В закладки</button>
               </figcaption>
             </figure>
           </li>
@@ -163,8 +163,8 @@
               <p class="popular-item-price popular-item-old-price">22500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
               <figcaption class="popular-item-options">
-                <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
-                <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
+                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
+                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
               </figcaption>
             </figure>
           </li>
@@ -181,8 +181,8 @@
               <p class="popular-item-price popular-item-old-price">30500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
               <figcaption class="popular-item-options">
-                <button class="option-buy" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
-                <button class="option-bookmark" type="button" tabindex="0" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
+                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
               </figcaption>
             </figure>
           </li>
