Добавлена стилизация фильтра производителей

--- a/catalog.html
+++ b/catalog.html
@@ -115,7 +115,7 @@
               </div>
             </fieldset>
             <fieldset class="filter-item">
-              <legend class="filter-legend-title">Производители:</legend>
+              <legend class="filter-legend-title filter-legend-brand">Производители:</legend>
               <ul>
                 <li class="filter-option filter-checkbox">
                   <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="bosch" id="filter-bosch" checked>
@@ -140,14 +140,14 @@
               </ul>
             </fieldset>
             <fieldset class="filter-item">
-              <legend class="filter-legend-title">Питание:</legend>
+              <legend class="filter-legend-title filter-legend-power">Питание:</legend>
               <ul>
                 <li class="filter-option filter-radio">
-                  <input class="visually-hidden filter-input-radio filter-input" type="radio" name="power-type" value="cordless" id="filter-cordless">
+                  <input class="visually-hidden filter-input-radio filter-input" type="radio" name="power-type" value="cordless" id="filter-cordless" checked>
                   <label for="filter-cordless">Аккумуляторные</label>
                 </li>
                 <li class="filter-option filter-radio">
-                  <input class="visually-hidden filter-input-radio filter-input" type="radio" name="power-type" value="mains-operated" id="filter-mains" checked>
+                  <input class="visually-hidden filter-input-radio filter-input" type="radio" name="power-type" value="mains-operated" id="filter-mains">
                   <label for="filter-mains">Сетевые</label>
                 </li>
               </ul>
