Добавлен скрипт для появления и закрытия модального окна с картой

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           <p class="contacts-info">Вы можете забрать товар сами,<br>
             заехав в наш офис:</p>
           <p class="contacts-map">
-            <a href="blank.html">
+            <a class="contacts-map-link" href="blank.html">
               <img class="contacts-map-image" src="img/map-small.png" width="300" height="158" alt="Карта офиса по адресу г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
             </a>
           </p>
