--- a/catalog.html
+++ b/catalog.html
@@ -430,5 +430,6 @@
       </div>
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </div>
+    <script src="js/modal-cart.js"></script>
   </body>
 </html>
