Добавлены и подключены файлы с минифицированными скриптами

--- a/catalog.html
+++ b/catalog.html
@@ -430,6 +430,6 @@
       </div>
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </div>
-    <script src="js/modal-cart.js"></script>
+    <script src="js/modal-cart.min.js"></script>
   </body>
 </html>
