Правки после первой попытки защиты

--- a/catalog.html
+++ b/catalog.html
@@ -108,7 +108,7 @@
                 <div class="price-controls">
                   <label for="min-price" class="visually-hidden">Минимальная цена, от</label>
                   <input type="number" class="price-control-input min-price" name="min-price" id="min-price" value="0">
-                  <span class="price-controls-devider">&mdash;</span>
+                  <span class="price-controls-divider">&mdash;</span>
                   <label for="max-price" class="visually-hidden">Максимальная цена, до</label>
                   <input type="number" class="price-control-input max-price" name="max-price" id="max-price" value="30000">
                 </div>
